--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": " https://lukas-jj.github.io/nz-noises/",
+  "homepage": "https://github.com/lukas-jj/nz-noises",
   "name": "nz-sounds",
   "version": "0.1.0",
   "private": true,
